...
                tools:text="account"
                android:layout_marginLeft="10dp"
                android:textIsSelectable="false"
                android:layout_marginBottom="20dp"/>

        <TextView
                android:id="@+id/tv_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/balace_text"
                android:textColor="@color/color_black"
                tools:text="balance"
                android:gravity="right"
...
              android:layout_marginTop="30dp"
              android:layout_marginBottom="10dp"
              android:textSize="@dimen/statement_text"
              android:text="@string/bank_statement"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_detail_transaction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"/>

</LinearLayout>
