<resources>
    <string name="app_name">Bank</string>
    <string name="action_settings">Settings</string>


    <string name="bank_statement">Bank Statement(click item, if you want to see detail)</string>
    <string name="account">Account :</string>
    <string name="balance">Balance :</string>
    <string name="id">Id :</string>
    <string name="amount">Amount :</string>
    <string name="description">Description :</string>
    <string name="date">Date :</string>
    <string name="other_account">Other_account :</string>
    <string name="before_balance">Before_balance :</string>
    <string name="after_balance">After_balance :</string>
    <string name="detail">Detail</string>

    <string name="ok">OK</string>

    <string name="file_error">file error!! please check file again.</string>
</resources>