<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">


    <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/date_text"
            android:textColor="@color/color_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_description"
            tools:text="date"/>

    <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintBottom_toTopOf="@id/tv_amount"
            android:textSize="@dimen/description_text"
            android:textColor="@color/color_black"
            tools:text="description"/>

    <TextView
            android:id="@+id/tv_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="right"
            android:textSize="@dimen/amount_text"
            android:textColor="@color/color_black"
            tools:text="amount"/>


</android.support.constraint.ConstraintLayout>