...
                    android:gravity="right"
                    android:layout_margin="@dimen/dialog_text_margin"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/balance_type_text"/>

            <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:padding="20dp"
                    android:background="@drawable/rectangle"
                    android:textSize="@dimen/dialog_normal_text"
...
